--- a/templates/gennaker.html
+++ b/templates/gennaker.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Spinnaker Area Calculator (ORC)</title>
+    <title>Gennaker Area Calculator (ORC)</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
