Add ORC certificate lookup

--- a/templates/home.html
+++ b/templates/home.html
@@ -10,6 +10,7 @@
     <ul>
         <li><a href="/sailarea">ORC Mainsail Area Calculator</a></li>
         <li><a href="/spinnaker">ORC Spinnaker/Gennaker Area Calculator</a></li>
+        <li><a href="/lookup">Certificate Lookup</a></li>
 
 
     </ul>
